part-3/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "app-v1.box"
        - "app-v2.box"
        - "seperated-by-query-params.box"
        - "seperated-by-path.box"
        - "response-headers.box"
